# learn-cmake-openwatcom

./: .gitattributes  CMakeLists.txt  README.md  Toolchain-dos.cmake  setup_vs.bat  setup_watcom.bat  setup_watcom_dos.bat
src/alibrary/: CMakeLists.txt  Cmake.GoogleTest.txt
src/alibrary/include/: alibrary.h
src/alibrary/src/: alibrary.c
src/alibrary/test/: testlib.cpp
src/hello/: CMakeLists.txt
src/hello/src/: hello.c
src/libuser/: CMakeLists.txt
src/libuser/src/: libuser.c
